--- a/usbCameraTest9/src/main/res/layout/activity_main.xml
+++ b/usbCameraTest9/src/main/res/layout/activity_main.xml
@@ -35,7 +35,7 @@
         android:layout_height="480dp"
         android:layout_centerInParent="true">
 
-        <com.serenegiant.widget.XCameraView
+        <com.serenegiant.widget.XUSBCameraView
             android:id="@+id/xcamera_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
