--- a/usbCameraCommon/src/main/res/layout/layout_x_camera_view.xml
+++ b/usbCameraCommon/src/main/res/layout/layout_x_camera_view.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<merge xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/rl_camera_layout"
     android:layout_width="match_parent"
@@ -43,7 +43,7 @@
         android:scaleType="centerCrop"
         android:src="@android:drawable/ic_menu_camera"
         android:visibility="gone" />
-</RelativeLayout>
+</merge>
 
 
 
